styles.css
@font-face {
  font-family: "IBM";
  src: url("./ibm.woff");
}
@font-face {
  font-family: "ACER";
  src: url('./Web437_Acer710_Mono.woff');
}

::-webkit-scrollbar {
  width: 9px;
}
::-webkit-scrollbar-track {
  background: transparent;
}
::-webkit-scrollbar-thumb {
  background-color: rgba(155, 155, 155, 0.5);
  border-radius: 20px;
  border: transparent;
}

* {
  font-family: "ACER" !important;
}

div.credits {
  position: absolute;
  z-index: 10000;
  width: 60vw !important;
  height: 15vh;
  left: 20%;
  top: 45%;
}

div.credits .window-body {
  height: 6vh;
}

body {
  margin: 0;
  padding: 0;
  min-height: 100vh;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: black;
  position: relative;
  overflow: scroll;
}

.app {
  width: 100vw;
  height: 100vh;
  background-color: rgba(0, 0, 0, 0.8);
  color: white;
  text-align: center;
  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
  position: relative;
  z-index: 1;
  display: flex;
  flex-direction: column;
  box-sizing: border-box;
}

.window-body {
  display: flex;
  flex-direction: column;
  height: calc(100% - 30px);
  overflow-y: auto;
}

.window {
  position: relative;
  overflow-x: hidden;
  overflow-y: scroll;
  height: 100%;
  background-color: black;
  box-shadow: inset -1px -1px navy, inset 1px 1px navy, inset -2px -2px navy,
    inset 2px 2px navy;
}

.tablist {
  background-color: silver;
  display: flex;
  justify-content: space-between;
  padding: 0;
  overflow-x: hidden;
  flex-wrap: nowrap;
  padding-left: 0px !important;
  margin: 3px 0 0 0 !important;
}

.tab[aria-selected="true"] {
  background-color: navy;
  margin-left: 0px !important;
  margin-top: 0px !important;
  box-shadow: inset -1px 0 navy, inset 1px 1px navy, inset -2px 0 navy,
    inset 2px 2px navy;
}

menu[role="tablist"] > li[aria-selected="true"] {
  background-color: navy;
}

menu[role="tablist"] > li[aria-selected="true"] > a {
  color: whitesmoke;
}

#landing-gifs img {
  height: 130px;
}

.tab {
  width: auto;
  flex-grow: 1;
  text-align: center;
  padding: 10px 0;
  box-sizing: border-box;
  white-space: nowrap;
}

.hover-container {
  display: inline-block;
}

.hover-image {
  width: 100%;
  max-width: 80%;
  max-height: 80%;
  position: absolute;
  bottom: 10px;
  left: 50%;
  top: 10%;
  transform: translateX(-50%);
  opacity: 0;
  height: 100%;
  transition: opacity 0.5s ease-in-out;
  pointer-events: none;
}

.hover-container:hover .hover-image,
.hover-image.active {
  opacity: 1;
}

form {
  display: flex;
  flex-direction: column;
  align-items: center;
}

form label {
  font-size: large;
}

form div.field-row-stacked {
  width: 50%;
}

form div.field-row-stacked:last-of-type {
  margin-bottom: 20px;
}

.sunken-panel {
  width: 40vw;
  height: 55vh;
}

table.interactive {
  width: 100%;
  overflow: scroll;
}

.gig-tables {
  display: flex;
  flex-direction: row;
  justify-content: center;
  gap: 5rem;
  margin-top: -70px;
}

tr {
  width: 100%;
  color: #222;
  height: 25px;
}

.titles {
  display: flex;
  justify-content: center;
  gap: 20px;
  text-align: center;
  margin-bottom: 20px;
}

.titles h4 {
  margin: 0;
  padding: 0;
}

h4.haha {
  margin-bottom: 70px;
}

.title-bar {
  height: 30px;
}

.title-bar-text {
  font-size: large;
  padding-left: 9px;
}

.title-bar-controls button[aria-label="Help"] {
  height: 25px;
  width: 25px;
  background-position: 48%;
}

.title-bar-controls button[aria-label="Close"] {
  height: 25px;
  width: 25px;
  background-position: 48%;
}

div.video-buttons,
div.lyrics-buttons {
  display: flex;
  flex-direction: row;
  justify-content: center;
  margin: 1em 0.5em;
  gap: 0.5em;
  flex-wrap: wrap;
}
div.video-buttons button,
div.lyrics-buttons button {
  word-wrap: break-word;
  font-size: 15px;
}

iframe#videoFrame {
  height: 432px;
  width: 576px;
}

.tab-content#videos p {
  color: rgb(6, 197, 31);
  font-size: 15px;
}

#responseMessage {
  margin-top: 1em;
  font-size: large;
}

.lyrics {
  display: flex;
  flex-direction: column;
}

.lyrics-container {
  margin: 1em;
  padding: 20px;
  font-size: large;
  color: white;
  height: 50vh;
  overflow-y: auto;
  font-family: monospace;
  white-space: pre-wrap;
  word-wrap: break-word;
}

div#visit-count {
  font-size: medium;
  margin-bottom: 1em;
  color: rgb(6, 197, 31);
}

div.album-links {
  display: flex;
  flex-direction: row;
  gap: 4em;
  align-items: center;
  justify-content: center;
}

iframe#bandcamp {
  border: 0;
  height: 50vh;
}

iframe#youtube {
  height: 45vh;
  width: 45vw;
}

.album-title {
  display: flex;
  justify-content: center;
  align-items: center;
}
.album-title h2 {
  font-size: 3.5rem;
}
#boombox {
  margin-top: -60px;
}
@media (max-width: 1250px) and (min-width: 851px) {
  .gifs {
    margin-top: -64px;
  }
  #boombox {
    margin-top: 0px;
  }
  div.album-links {
    display: grid;
    grid-template-columns: repeat(3, 0fr);
    grid-template-rows: repeat(2, 1fr);
    grid-column-gap: 2em;
    grid-row-gap: 10px;
  }
  iframe#bandcamp {
    grid-area: 1 / 1 / 2 / 2;
  }
  iframe#youtube {
    grid-area: 1 / 2 / 2 / 3;
  }
  iframe#spotify {
    grid-area: 2 / 2 / 3 / 2;
  }
}

@media (max-width: 850px) {
  #boombox {
    margin-top: 0px;
  }
  .app {
    width: 100vw;
    height: 100vh;
    margin: 0;
  }
  .title-bar-text {
    font-size: larger;
  }

  h1 {
    font-size: 4rem;
  }

  .lyrics-container {
    font-size: 20px;
  }

  .tablist {
    padding: 0px;
    justify-content: flex-start;
  }

  .tab {
    width: auto;
    font-size: 15px;
    padding: 5px;
  }

  iframe#videoFrame {
    width: 90%;
    height: 45vh;
  }

  .sunken-panel {
    width: 40vw;
    height: 50vh;
  }

  table.interactive {
    font-size: smaller;
  }

  .field-row-stacked {
    width: 80%;
  }

  .gig-tables {
    gap: 1rem;
    margin: -20px 5px;
  }

  div.album-links {
    flex-direction: column;
    margin: 1em;
  }
  iframe#bandcamp {
    width: 80vw !important;
  }
  iframe#spotify {
    width: 80vw;
  }
  iframe#youtube {
    height: 45vh;
    width: 80vw;
  }
  .gifs img {
    height: 100px;
  }
  #rat1 {
    width: 80px;
    height: 80px;
    margin-left: 1rem;
  }
  #rat2 {
    width: 80px;
    height: 80px;
    padding-left: 0.5rem !important;
    margin-right: 1rem;
  }
}

@media (max-width: 572px) {
  .gifs img {
    height: 100px;
  }
  .gifs {
    margin-top: -64px;
  }
}

@media (max-width: 480px) {
  .gifs {
    margin-top: -64px;
  }

  .gifs img {
    height: 90px;
  }

  div.video-buttons button,
  div.lyrics-buttons button {
    font-size: 10px !important;
  }

  h2 {
    font-size: 2rem;
  }

  menu[role="tablist"] > li > a {
    margin: 9px !important;
  }

  .app {
    width: 100vw;
    height: 100vh;
  }

  .gig-panel {
    width: 90%;
  }

  .gig-tables {
    flex-wrap: wrap;
    margin-bottom: 1rem;
  }

  h1 {
    font-size: 3rem;
  }

  .tab {
    width: auto;
    font-size: 12px;
  }

  menu.tablist {
    display: grid !important;
    grid-template-columns: repeat(3, minmax(0, 1fr)) !important;
    height: 5.5rem;
    margin: 0 1px -2px;
  }

  iframe#videoFrame {
    width: 95%;
    height: 45vh;
  }

  .sunken-panel {
    width: 100%;
  }

  .video-buttons {
    flex-direction: column;
    gap: 5px;
  }

  div.video-buttons {
    gap: 0.5em !important;
    margin-bottom: 15px;
  }

  form label {
    font-size: medium;
  }

  .field-row-stacked {
    width: 90%;
  }

  div.album-links {
    flex-direction: column;
    margin: 1em;
  }
  iframe#bandcamp {
    width: 78vw !important;
  }
  .album-title {
    flex-direction: column;
  }
  #rat1 {
    display: none;
  }
  #rat2 {
    width: 130px;
    height: 130px;
    position: relative;
    top: -2.5rem;
  }
  .tab[aria-selected="true"] {
    margin-left: 0px !important;
    margin-top: 0px !important;
  }
}
@media (max-width: 395px) {
  .gifs img {
    height: 65px;
  }
  .lyrics-buttons button {
    padding: 0;
  }
}
@media (max-width: 313px) {
  .lyrics-buttons {
    margin: 0 !important;
    gap: 0.2em !important;
  }
  .lyrics-buttons button {
    padding: 0;
  }
  .tab {
    width: auto;
    font-size: 10px;
  }
}

